# cube-club-rs

./: .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml
migrations/2024-08-25-014037_create-mosaics/: down.sql  up.sql
sql/: schema.sql  setup.sql
src/: admin.rs  leaderboard.rs  login.rs  main.rs  models.rs  mosaic.rs  schema.rs  timer.rs
src/model/: base.rs  color.rs  config.rs  error.rs  mod.rs  mosaic_design.rs  mosaic_tile.rs  puzzle.rs  scramble.rs  user.rs
templates/: base.html.tera  error.html.tera  index.html.tera  leaderboard.html.tera  macros.html.tera  thanks.html.tera  timer.html.tera
templates/basic/: checkin.html.tera  error.html.tera  thanks.html.tera
templates/mosaic/: mosaic_admin.html.tera  mosaic_base.html.tera  mosaic_select.html.tera  mosaic_single.html.tera  mosaic_user.html.tera  mosaic_viewer.html.tera
www/public/: index.html
