[package]
name = "cube-club-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
rocket = "0.5.1"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite", "sqlx_macros", "sqlx"] }
sqlx = "0.7.4"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
anyhow = "1.0.86"
hex_color = "3.0.0"
