[package]
name = "cube-club-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["secrets", "json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite", "sqlx_macros", "sqlx"] }
sqlx = "0.7.4"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
anyhow = "1.0.86"
hex_color = "3.0.0"
tokio = { version = "1.6.1", features = ["full"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rand = "0.8.5"
rocket_oauth2 = "0.5.0"
reqwest = { version = "0.12.7", features = ["json"] }
log = "0.4.22"
